--- a/templates/home.html
+++ b/templates/home.html
@@ -65,8 +65,8 @@
     </div>
     <div class="home-stat-card alt">
       <p class="home-stat-label">Words logged</p>
-      <p class="home-stat-value">132</p>
-      <span class="trend up">+18 this week</span>
+      <p class="home-stat-value">{{ total_cards or 0 }}</p>
+      <span class="trend up">Across all decks</span>
     </div>
     <div class="home-stat-card">
       <p class="home-stat-label">Sessions</p>
