new arctic theme

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', path='/home.css') }}" data-theme-sheet="amber">
   <link rel="stylesheet" href="{{ url_for('static', path='/home.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
+  <link rel="stylesheet" href="{{ url_for('static', path='/home.arctic.css') }}" data-theme-sheet="arctic" disabled>
 {% endblock %}
 
 {% block body_class %}home{% endblock %}
