--- a/templates/wordle.html
+++ b/templates/wordle.html
@@ -6,6 +6,7 @@
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', path='/wordle.css') }}" data-theme-sheet="amber">
   <link rel="stylesheet" href="{{ url_for('static', path='/wordle.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
+  <link rel="stylesheet" href="{{ url_for('static', path='/wordle.arctic.css') }}" data-theme-sheet="arctic" disabled>
 {% endblock %}
 
 {% block body_class %}wordle-body{% endblock %}
