--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}" data-theme-sheet="amber">
   <link rel="stylesheet" href="{{ url_for('static', path='/styles.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
+  <link rel="stylesheet" href="{{ url_for('static', path='/styles.arctic.css') }}" data-theme-sheet="arctic" disabled>
   {% block extra_head %}{% endblock %}
   <script type="module" src="{{ url_for('static', path='/theme-init.js') }}"></script>
 </head>
