--- a/templates/flashcard.html
+++ b/templates/flashcard.html
@@ -6,6 +6,7 @@
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', path='/flashcard.css') }}" data-theme-sheet="amber">
   <link rel="stylesheet" href="{{ url_for('static', path='/flashcard.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
+  <link rel="stylesheet" href="{{ url_for('static', path='/flashcard.arctic.css') }}" data-theme-sheet="arctic" disabled>
 {% endblock %}
 
 {% block body_class %}flashcard{% endblock %}
