--- a/templates/random.html
+++ b/templates/random.html
@@ -6,6 +6,7 @@
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', path='/random.css') }}" data-theme-sheet="amber">
   <link rel="stylesheet" href="{{ url_for('static', path='/random.sapphire.css') }}" data-theme-sheet="sapphire" disabled>
+  <link rel="stylesheet" href="{{ url_for('static', path='/random.arctic.css') }}" data-theme-sheet="arctic" disabled>
 {% endblock %}
 
 {% block body_class %}random{% endblock %}
