--- a/templates/random.html
+++ b/templates/random.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Language · Random Word{% endblock %}
+{% block title %}Random{% endblock %}
 
 {% block extra_head %}
   {{ super() }}
